[package]
name = "looke"
description = "To determine if two images look the same to human color perception"
version = "0.2.2-alpha.0"
authors = ["hikerpig <hikerpigwinnie@gmail.com>"]
repository = "https://github.com/hikerpig/looke"
edition = "2018"
license = "MIT"

readme = "README.md"
keywords = ["image", "diff"]

[dependencies]
image = "0.20"
palette = "0.4.1"
clap = "2.32.0"
